<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NEXT STEP</string>
    <string name="notification_subtitle">Счетчик ваших шагов</string>

    <string name="started">NEXT STEP запущен.</string>
    <string name="stopped">NEXT STEP остановлен.</string>

    <string name="steps">шаги</string>
    <string name="kilometers">километров</string>
    <string name="miles">miles</string>
    <string name="steps_per_minute">шагов / мин</string>
    <string name="kilometers_per_hour">км / ч</string>
   <!-- <string name="miles_per_hour">miles / hour</string>-->
    <string name="calories_burned">калорий затрачено</string>
    <string name="calories_took">калорий получено</string>
    <string name="centimeters">сантиметров</string>
    <string name="age">лет</string>
  <!--  <string name="inches">дюймов</string>-->
    <string name="kilograms">килограмм</string>
   <!-- <string name="pounds">фунтов</string>-->


    <string name="pause">Пауза</string>
    <string name="resume">Старт</string>
    <string name="reset">Сброс</string>
    
    <!-- Settings -->
    <string name="settings">Настройки</string>
    <string name="activity_settings">Настройки</string>
    <string name="steps_settings_title">Basic Settings</string>
    <string name="sensitivity_setting">Чувствительность</string>
    <string name="sensitivity_setting_details">Калибровка чувствительности шага</string>
    <string name="sensitivity_setting_title">Выберите уровень чувствительности</string>
    <string name="extra_high">сверхвысокая</string>
    <string name="very_high">очень высокая</string>
    <string name="high">высокая</string>
    <string name="higher">выше среднего</string>
    <string name="medium">средняя</string>
    <string name="lower">ниже среднего</string>
    <string name="low">низкая</string>
    <string name="very_low">очень низкая</string>
    <string name="extra_low">сверх низкая</string>
    <string name="units_setting">Единицы</string>
    <string name="units_setting_details">Имперские или метрические единицы</string>
    <string name="units_setting_title">Выберите единицы</string>
    <string name="units_metric">метрические (км)</string>
    <string name="units_imperial">imperial (миль)</string>
    <string name="step_length_setting">Длина шага</string>
    <string name="step_length_setting_details">Для расстояния, скорости &amp; расчета калорий</string>
    <string name="step_length_setting_title">Введите длину вашего шага</string>

    <string name="body_weight_setting">Масса тела</string>
    <string name="body_weight_setting_details">Для расчета калорий</string>
    <string name="body_weight_setting_title">Введите свой вес тела</string>

    <string name="height_setting">Рост</string>
    <string name="height_setting_details">Для расчета базального метаболизма</string>
    <string name="height_setting_title">введи свой рост</string>

    <string name="age_setting">Возраст</string>
    <string name="age_setting_details">Для расчета базального метаболизма</string>
    <string name="age_setting_title">Введие свой возраст</string>

    <string name="exercise_type_setting">Вид занятия</string>
    <string name="exercise_type_setting_details">Для расчета калорий</string>
    <string name="exercise_type_setting_title">Выберите вид упражнения</string>
    <string name="exercise_type_running">бег</string>
    <string name="exercise_type_walking">ходьба</string>

    <string name="add">Добавить</string>
    <string name="decryption_1">Детализация</string>
    <string name="decryption_2">Детализация</string>


    <string name="sport">ИМТ</string>
    <string name="my_statistics">Статистика</string>

    <string name="sex_type_setting">Пол</string>
    <string name="sex_type_setting_details">Для расчета базального метаболизма</string>
    <string name="sex_type_setting_title">Выберете ваш пол</string>
    <string name="sex_type_female">женский</string>
    <string name="sex_type_male">мужской</string>

    <string name="quit">Выход</string>
    <string name="add_2">Добавить</string>
    <string name="decryption_4">Детализация</string>
    <string name="balance">Баланс калорий</string>
    <string name="stat">Статистика</string>
    <string name="cal_burned">Учет калорий</string>
    <string name="decryp_burned">Детализация затраченных калорий</string>
    <string name="add_cal">Добавление калорий</string>
    <string name="decryption_cal">Детализация полученных калорий</string>
    <string name="bmi">ИМТ</string>
    <string name="mystatistics">Статистика</string>
    <string name="spent_all_calories">Потрачено всего калорий:</string>
    <string name="basal_metabolism">Базальный метаболизм:</string>
    <string name="Running_Walking">Бег и ходьба:</string>
    <string name="other_loads">Другие нагрузки:</string>
    <string name="drive">Езда в автомобиле</string>
    <string name="drive_cal">101</string>
    <string name="drive_add">Добавить</string>
    <string name="skating">Катание на коньках</string>
    <string name="skating_cal">400</string>
    <string name="skating_add">Добавить</string>
    <string name="jumping_rope">Прыжки со скакалкой</string>
    <string name="jumping_rope_cal">800</string>
    <string name="jumping_rope_add">Добавить</string>
    <string name="gymnastics">Гимнастика</string>
    <string name="gymnastics_cal">440</string>
    <string name="gymnastics_add">Добавить</string>
    <string name="roller_skating">Катание на роликах</string>
    <string name="roller_skating_cal">350</string>
    <string name="roller_skating_add">Добавить</string>
    <string name="swimming">Плавание</string>
    <string name="swimming_cal">350</string>
    <string name="swimming_add">Добавить</string>
    <string name="skiing">Ходьба на лыжах</string>
    <string name="skiing_cal">500</string>
    <string name="skiing_add">Добавить</string>
    <string name="first_courses">Первые блюда</string>
    <string name="main_dishes">Вторые блюда</string>
    <string name="garnishes">Гарниры</string>
    <string name="desserts">Десерты</string>
    <string name="snacks">Фрукты</string>
    <string name="drinks">Напитки</string>
    <string name="borsch">Борщ</string>
    <string name="borsch_cal">57,7</string>
    <string name="borsch_add">Добавить</string>
    <string name="broth">Бульон</string>
    <string name="broth_cal">50,8</string>
    <string name="broth_add">Добавить</string>
    <string name="pea_soup">Гороховый суп</string>
    <string name="pea_soup_cal">54,3</string>
    <string name="pea_soup_add">Добавить</string>
    <string name="mushroom_soup">Грибной суп</string>
    <string name="mushroom_soup_cal">50,9</string>
    <string name="mushroom_soup_add">Добавить</string>
    <string name="pickle">Рассольник</string>
    <string name="pickle_cal">40,4</string>
    <string name="pickle_add">Добавить</string>
    <string name="bean_soup">Суп фасолевый</string>
    <string name="bean_soup_cal">66,3</string>
    <string name="bean_soup_add">Добавить</string>
    <string name="soup_kharcho">Суп-харчо</string>
    <string name="soup_kharcho_cal">43,9</string>
    <string name="soup_kharcho_add">Добавить</string>
    <string name="ear">Уха</string>
    <string name="ear_cal">66,7</string>
    <string name="ear_add">Добавить</string>
    <string name="output_1">Первые блюда:</string>
    <string name="main">Вторые блюда:</string>
    <string name="garnir">Гарниры:</string>
    <string name="dessert">Десерты:</string>
    <string name="snack">Фрукты:</string>
    <string name="drink">Напитки:</string>
    <string name="entrecote">Антрекот</string>
    <string name="entrecote_cal">317,2565</string>
    <string name="cutlets">Котлеты</string>
    <string name="cutlets_cal">162,4</string>
    <string name="steak">Бифштекс</string>
    <string name="steak_cal">384,3</string>
    <string name="dumplings">Вареники</string>
    <string name="dumplings_cal">355,4</string>
    <string name="fried_mushrooms">Грибы жареные</string>
    <string name="fried_mushrooms_cal">162,1</string>
    <string name="goulash">Гуляш</string>
    <string name="goulash_cal">326</string>
    <string name="meat_stew">Мясо тушеное</string>
    <string name="meat_stew_cal">252,3</string>
    <string name="omelette">Омлет натуральный</string>
    <string name="omelette_cal">221,9</string>
    <string name="mashed_potatoes">Картофельное пюре</string>
    <string name="mashed_potatoes_cal">81,7</string>
    <string name="pilaf">Плов</string>
    <string name="pilaf_cal">150,7</string>
    <string name="fried_cauliflower">Капуста жареная</string>
    <string name="fried_cauliflower_cal">60,6</string>
    <string name="potato_casserole">Картофельная запеканка</string>
    <string name="potato_casserole_cal">79,8</string>
    <string name="buckwheat">Гречневая каша</string>
    <string name="buckwheat_cal">98,7</string>
    <string name="rice_porridge">Рисовая каша</string>
    <string name="rice_porridge_cal">119,7</string>
    <string name="kiss">Безе</string>
    <string name="kiss_cal">234,4</string>
    <string name="sponge_cake">Бисквит</string>
    <string name="sponge_cake_cal">319,2</string>
    <string name="pancakes">Блины</string>
    <string name="pancakes_cal">232,5</string>
    <string name="wafers">Вафли</string>
    <string name="wafers_cal">210,9</string>
    <string name="lemon_jelly">Желе лимонное</string>
    <string name="lemon_jelly_cal">87,6</string>
    <string name="fritters">Оладьи</string>
    <string name="fritters_cal">201,1</string>
    <string name="souffle">Суфле</string>
    <string name="souffle_cal">203,2</string>
    <string name="watermelon">Арбуз</string>
    <string name="watermelon_cal">38</string>
    <string name="melon">Дыня</string>
    <string name="melon_cal">35</string>
    <string name="pineapple">Ананас</string>
    <string name="pineapple_cal">40</string>
    <string name="oranges">Апельсины</string>
    <string name="oranges_cal">40</string>
    <string name="bananas">Бананы</string>
    <string name="bananas_cal">89</string>
    <string name="apples">Яблоки</string>
    <string name="apples_cal">45</string>
    <string name="cocoa">Какао с молоком</string>
    <string name="cocoa_cal">102,8</string>
    <string name="compote">Компот из вишни</string>
    <string name="compote_cal">53,5</string>
    <string name="coffee">Кофе на молоке</string>
    <string name="coffee_cal">64,1</string>
    <string name="milk">Молоко кипяченое</string>
    <string name="milk_cal">60,5</string>
    <string name="tea">Чай с лимоном</string>
    <string name="tea_cal">41,1</string>
    <string name="recommendations">Рекомендации</string>
    <string name="recommendations_1">Рекомендации:</string>
    <string name="cutlets_call">438,2</string>
    <string name="speps_1">Активность:</string>
    <string name="belci">Белки</string>
    <string name="fats">Жиры</string>
    <string name="carbohydrates">Углеводы</string>
    <string name="wrist_size_setting">Объем запястья</string>
    <string name="wrist_size_setting_details">Для вычисления типа телосложения</string>
    <string name="wrist_size_setting_title">Введите размер запястья</string>
    <string name="somatotype">Тип телосложения:</string>
    <string name="ideal_weight">Идеальный вес:</string>


</resources>
