<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_courses"
            android:id="@+id/btn_first_courses"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_dishes"
            android:id="@+id/btn_main_dishes"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_garnishes"
            android:text="@string/garnishes"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desserts"
            android:id="@+id/btn_desserts"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/snacks"
            android:id="@+id/btn_snacks"
            android:layout_gravity="center_horizontal"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drinks"
            android:id="@+id/btn_drinks"/>
</LinearLayout>