<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:weightSum="1">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:weightSum="1">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Название  "
                android:id="@+id/textView"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="       Ккал/100 гр"
                android:id="@+id/textView2"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="   грамм"
                android:id="@+id/textView3"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="132dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/borsch"
                android:id="@+id/textView5"
                android:layout_weight="0.32"/>
        <TextView
                android:layout_width="81dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/borsch_cal"
                android:id="@+id/textView6"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/borsch_gram"
                android:layout_weight="1.16"
                android:inputType="number"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/borsch_add"
                android:id="@+id/btn_borsch"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="132dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/broth"
                android:id="@+id/textView7"
                android:layout_weight="0.32"/>
        <TextView
                android:layout_width="81dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/broth_cal"
                android:id="@+id/textView8"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/broth_gram"
                android:layout_weight="1.16"
                android:inputType="number"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/broth_add"
                android:id="@+id/btn_broth"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
            android:layout_width="132dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pea_soup"
            android:id="@+id/textView10"
            android:layout_weight="0.32"/>
    <TextView
            android:layout_width="81dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pea_soup_cal"
            android:id="@+id/textView11"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pea_soup_gram"
            android:layout_weight="1.16"
            android:inputType="number"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pea_soup_add"
            android:id="@+id/btn_pea_soup"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="132dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mushroom_soup"
                android:id="@+id/textView12"
                android:layout_weight="0.32"/>
        <TextView
                android:layout_width="81dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mushroom_soup_cal"
                android:id="@+id/textView13"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mushroom_soup_gram"
                android:layout_weight="1.16"
                android:inputType="number"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mushroom_soup_add"
                android:id="@+id/btn_mushroom_soup"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="132dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pickle"
                android:id="@+id/textView14"
                android:layout_weight="0.32"/>
        <TextView
                android:layout_width="81dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pickle_cal"
                android:id="@+id/textView15"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pickle_gram"
                android:layout_weight="1.16"
                android:inputType="number"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pickle_add"
                android:id="@+id/btn_pickle"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="132dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/bean_soup"
                android:id="@+id/textView4"
                android:layout_weight="0.32"/>
        <TextView
                android:layout_width="81dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/bean_soup_cal"
                android:id="@+id/textView1"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bean_soup_gram"
                android:layout_weight="1.16"
                android:inputType="number"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bean_soup_add"
                android:id="@+id/btn_bean_soup"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="132dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/soup_kharcho"
                android:id="@+id/textView16"
                android:layout_weight="0.32"/>
        <TextView
                android:layout_width="81dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/soup_kharcho_cal"
                android:id="@+id/textView17"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/soup_kharcho_gram"
                android:layout_weight="1.16"
                android:inputType="number"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soup_kharcho_add"
                android:id="@+id/btn_soup_kharcho"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="132dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ear"
                android:id="@+id/textView18"
                android:layout_weight="0.32"/>
        <TextView
                android:layout_width="81dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ear_cal"
                android:id="@+id/textView19"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ear_gram"
                android:layout_weight="1.16"
                android:inputType="number"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ear_add"
                android:id="@+id/btn_ear"/>
    </LinearLayout>

</LinearLayout>